--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-04-01 12:55+0000\n"
-"PO-Revision-Date: 2025-06-19 01:14+0200"
+"POT-Creation-Date: 2025-06-19 08:35+0000\n"
+"PO-Revision-Date: 2024-10-29 23:06+0000\n"
 "Last-Translator: krazanas <krazi321@gmail.com>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/coop-scenarios/titans_stronghold/pl/>\n"
@@ -158,11 +158,11 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:145 coops/titans_stronghold.tex:110
+#: coops/sentinels.tex:144 coops/titans_stronghold.tex:110
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
-#: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:28
-#: sections/credits.tex:32
+#: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
+#: sections/credits.tex:34
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -214,7 +214,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\textit{Dawno temu zbudowano potężną fortecę, aby pomieścić fantastycznych i zabójczych Tytanów.\n"
-"  Nikomu nie udało się wejść do środka i wrócić, by opowiedzieć o tym.\n"
+"  Nikomu nie udało się wejśc do środka i wrócić, by opowiedzieć o tym.\n"
 "  Teraz krążą plotki o śmierci strażników i niesamowitej ilości skarbów, w tym potencjalnie najlepszego łuku na świecie.\\\\\n"
 "  Jeśli ta legenda o pustej fortecy jest prawdziwa, nadszedł czas na wykopaliska.\\\\\n"
 "  Ale na razie ty i twoi sojusznicy musicie znaleźć klucze rozsiane po Antagarich, aby otworzyć bramę do Twierdzy Tytanów.\n"
@@ -463,7 +463,17 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:108
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "  \\item Any time a Hero enters the Titans' Stronghold, they draw 5 Cards from the Titans' Stronghold Deck instead of from the Neutral Unit Card Decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit Decks instead of the Titans' Stronghold Deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold Deck. If there are not enough Unit Cards in this Deck, draw as many Unit Cards as are available and place them on the Combat Board.\n"
+#| "  \\item Combat in the Titans' Stronghold now costs 1 MP to extend per Combat Round, just like Combat against non-Azure tier Units.\n"
+#| "  \\item Additionally, no player can:\n"
+#| "  \\begin{itemize}\n"
+#| "    \\item Attack other Heroes.\n"
+#| "    \\item Capture a Mine or Settlement that is already controlled.\n"
+#| "  \\end{itemize}\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "  \\item Any time a Hero enters the Titans' Stronghold, they draw 5 Cards from the Titans' Stronghold Deck instead of from the Neutral Unit Card Decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit Decks instead of the Titans' Stronghold Deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold Deck. If there are not enough Unit Cards in this Deck, draw as many Unit Cards as are available and place them on the Combat Board.\n"
 "  \\item Combat in the Titans' Stronghold now costs 1 \\svgeven{movement} to extend per Combat Round, just like Combat against non-Azure tier Units.\n"
@@ -481,7 +491,7 @@ msgstr ""
 "    Wszystkie Jednostki Neutralne pokonane podczas Walki w Twierdzy Tytanów są zwracane do odpowiednich Talii Jednostek Neutralnych, a nie do Talii Twierdzy Tytanów.\n"
 "    Wszystkie Jednostki Neutralne, które przetrwały Walkę w Twierdzy Tytanów, są ponownie tasowane do Talii Twierdzy Tytanów.\n"
 "    Jeśli w tej Talii brakuje Kart Jednostek, należy dobrać tyle Kart Jednostek, ile jest dostępnych, i umieścić je na planszy Walki.\n"
-"  \\item Walka w Twierdzy Tytanów teraz kosztuje 1 \\svgeven{movement} za przedłużenie na każdą Rundę Walki, tak jak Walka przeciwko Jednostkom poziomu innego niż błękitny.\n"
+"  \\item Walka w Twierdzy Tytanów teraz kosztuje 1 PR za przedłużenie na każdą Rundę Walki, tak jak Walka przeciwko Jednostkom poziomu innego niż błękitny.\n"
 "  \\item Dodatkowo żaden gracz nie może:\n"
 "  \\begin{itemize}\n"
 "    \\item Atakować innych Bohaterów.\n"
@@ -568,32 +578,31 @@ msgstr ""
 "\\darkcell[1.8]{3 graczy} & \\lightcell[1.8]{8\\bronze 7\\silver 4\\golden "
 "2\\azure} & \\lightcell[1.8]{6\\bronze 7\\silver 5\\golden 3\\azure} & "
 "\\lightcell[1.8]{2\\bronze 3\\silver 4\\golden 3\\azure \\linebreak "
-"Następnie\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & "
-"\\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak "
-"Następnie\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
-"\\darkcell[1.8]{4 graczy} & \\lightcell[1.8]{10\\bronze "
-"10\\silver\\linebreak 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze "
-"10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver "
-"5\\golden 3\\azure \\linebreak Następnie\\linebreak 2\\bronze 5\\silver "
-"5\\golden 3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden "
-"4\\azure \\linebreak Następnie\\linebreak 1\\bronze 5\\silver 7\\golden "
-"4\\azure}\\\\ \\darkcell[1.8]{5 graczy} & \\lightcell[1.8]{6\\bronze "
-"6\\silver 4\\golden 1\\azure \\linebreak Następnie\\linebreak 7\\bronze "
-"6\\silver 3\\golden 2\\azure} & \\lightcell[1.8]{5\\bronze 6\\silver "
-"4\\golden 2\\azure \\linebreak Następnie\\linebreak 5\\bronze 6\\silver "
-"4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 6\\silver 6\\golden "
-"4\\azure \\linebreak Następnie\\linebreak 3\\bronze 6\\silver 6\\golden "
-"4\\azure} & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden 6\\azure "
-"\\linebreak Następnie\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}\\\\ "
-"\\darkcell[1.8]{6 graczy} & \\lightcell[1.8]{8\\bronze 8\\silver 4\\golden "
-"1\\azure \\linebreak Następnie\\linebreak 7\\bronze 7\\silver 5\\golden "
-"2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure "
-"\\linebreak Następnie\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} & "
-"\\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak "
-"Następnie\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & "
-"\\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
-"Następnie\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
-"\\end{tabularx} }"
+"Potem\\linebreak 2\\bronze 4\\silver 3\\golden 2\\azure} & \\lightcell[1.8]"
+"{1\\bronze 3\\silver 5\\golden 3\\azure \\linebreak Potem\\linebreak "
+"1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ \\darkcell[1.8]{4 graczy} & "
+"\\lightcell[1.8]{10\\bronze 10\\silver\\linebreak 6\\golden 2\\azure} & "
+"\\lightcell[1.8]{8\\bronze 10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]"
+"{2\\bronze 5\\silver 5\\golden 3\\azure \\linebreak Potem\\linebreak "
+"2\\bronze 5\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{1\\bronze "
+"5\\silver 7\\golden 4\\azure \\linebreak Potem\\linebreak 1\\bronze "
+"5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]{5 graczy} & "
+"\\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure \\linebreak "
+"Potem\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} & \\lightcell[1.8]"
+"{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak Potem\\linebreak "
+"5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
+"6\\silver 6\\golden 4\\azure \\linebreak Potem\\linebreak 3\\bronze "
+"6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze 6\\silver "
+"8\\golden 6\\azure \\linebreak Potem\\linebreak 2\\bronze 6\\silver "
+"8\\golden 5\\azure}\\\\ \\darkcell[1.8]{6 graczy} & \\lightcell[1.8]"
+"{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak Potem\\linebreak "
+"7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
+"8\\silver 4\\golden 3\\azure \\linebreak Potem\\linebreak 6\\bronze "
+"7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver "
+"7\\golden 5\\azure \\linebreak Potem\\linebreak 3\\bronze 7\\silver "
+"8\\golden 4\\azure} & \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden "
+"6\\azure \\linebreak Potem\\linebreak 3\\bronze 8\\silver 10\\golden "
+"6\\azure}\\\\ \\end{tabularx} }"
 
 #. type: center
 #: coops/titans_stronghold.tex:199
