--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-04-01 12:55+0000\n"
-"PO-Revision-Date: 2025-06-19 01:14+0200"
+"POT-Creation-Date: 2025-06-19 08:35+0000\n"
+"PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/clash-scenarios/bloody_grail/cs/>\n"
@@ -44,11 +44,11 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:145 coops/titans_stronghold.tex:110
+#: coops/sentinels.tex:144 coops/titans_stronghold.tex:110
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
-#: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:28
-#: sections/credits.tex:32
+#: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
+#: sections/credits.tex:34
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -356,7 +356,47 @@ msgstr ""
 
 #. type: multicols*
 #: clash/bloody_grail.tex:118
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{itemize}\n"
+#| "  \\item When a player Visits an Obelisk, they \\textit{must} resolve one of the following effects:\n"
+#| "  \\begin{enumerate}[leftmargin=15pt]\n"
+#| "    \\item \\textbf{[Cleanse]} The player receives one of the following boons, depending on how many Obelisks they have Visited:\n"
+#| "    \\begin{enumerate}\n"
+#| "      \\item \\textbf{[1st Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have one, gain 6 \\svg{gold} instead. Then, choose one enemy player to discard 1 random Card from their hand.\n"
+#| "      \\item \\textbf{[2nd Obelisk]} Increase your \\svg{gold}, \\svg{building_materials}, or \\svg{valuables} income by 1 step.\n"
+#| "      \\item \\textbf{[3rd Obelisk]} Roll 2 \\svg{treasure} and choose 1 to resolve; then, gain \\svg{morale_positive} and \\svgeven{movement}.\n"
+#| "      \\item \\textbf{[4th Obelisk]} Remove up to 4 Cards from your hand, except Statistic Cards; then, search each corresponding Deck for a Card of your choice and put it in your hand.\n"
+#| "    \\end{enumerate}\n"
+#| "    \\item \\textbf{[Sacrifice]} Remove a * Faction Unit Card from your Unit Deck in exchange for:\n"
+#| "    \\begin{enumerate}\n"
+#| "      \\item *\\bronze\\: Gain 6 \\svg{gold}, 3 \\svg{building_materials}, and 1 \\svg{valuables}. Additionally, if the Unit Card was on the Pack side, \\textbf{Search (4)} the Minor Artifact Deck.\n"
+#| "      \\item *\\silver\\: Gain 12 \\svg{gold}, 6 \\svg{building_materials}, and 2 \\svg{valuables}. Additionally, if the Unit Card was on the Pack side, \\textbf{Search (3)} the Major Artifact Deck.\n"
+#| "      \\item *\\golden\\: Gain 18 \\svg{gold}, 9 \\svg{building_materials}, and 3 \\svg{valuables}. Additionally, \\textbf{Search (2)} the Relic Card Deck. Finally, if the Unit Card was on the Pack side, \\textbf{Search (2)} the \\azure\\ Unit Deck; you may Recruit one of these Units for half the cost (rounded down).\n"
+#| "    \\end{enumerate}\n"
+#| "  \\end{enumerate}\n"
+#| "  \\item A player that chooses \\textbf{Sacrifice} at an Obelisk gains the title of ``\\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red Faction Cube on their Hero portrait to mark this effect. A \\textcolor{darkcandyapplered}{Blood Knight} may never choose the \\textbf{Cleanse} option when Visiting an Obelisk.\n"
+#| "  \\item A player that chooses \\textbf{Cleanse} at an Obelisk gains the title of ``\\textcolor{cobalt}{Grail Knight}.'' Place a blue Faction Cube on their Hero portrait to mark this effect. A \\textcolor{cobalt}{Grail Knight} may never choose the \\textbf{Sacrifice} option when Visiting an Obelisk.\n"
+#| "  \\item When a player chooses \\textbf{Sacrifice} at an Obelisk, place a number of Faction Cubes on the sacrificed Unit Card and on the Obelisk Field equivalent to the number of times the player has chosen the \\textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 Faction Cubes on the Unit Card and 2 Faction Cubes on the Obelisk Field.\n"
+#| "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may, after Visiting an Obelisk, Recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to Recruit Few instead.\n"
+#| "  \\item If a Unit Recruited at an Obelisk is defeated, remove it.\n"
+#| "  \\item A player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability Card. If a player who possesses no title or the title of ``\\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability Card, they may show it to the other players, then discard it and draw a new Ability Card in its stead.\n"
+#| "  \\item A player who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may not use the Diplomacy Ability Card to Recruit Neutral \\azure\\ Units.\n"
+#| "  \\item Whenever an Astrologers Proclaim or Event Card that allows you to Recruit Neutral Units is drawn, ignore it and draw a new Astrologers Proclaim or Event Card.\n"
+#| "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their Faction Town.\n"
+#| "  \\item Ignore Combat encounters on the Field with the Grail.\n"
+#| "  \\item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.\n"
+#| "  \\item To obtain the Grail Token, a player’s Hero must spend 2 MPs on the Field with the Grail.\n"
+#| "  \\item If a player does not possess the title of ``\\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit Card from their Unit Deck immediately after obtaining the Grail Token. This effect can only occur once per player.\n"
+#| "  \\item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.\n"
+#| "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
+#| "  \\item If a Neutral army defeats the Hero with the Grail Token, the Grail Token is placed on the Field where the Hero was defeated.\n"
+#| "  \\item If a Hero with the Grail Token casts Town Portal or uses the Inferno Faction Castle Gate building, the Grail Token is placed on the hex where the Spell was cast or the building used.\n"
+#| "  \\item The Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat, if the Hero is a \\textcolor{darkcandyapplered}{Blood Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units and assign it to enemy Units.''\n"
+#| "  \\item A Hero with the Grail Token who possesses the title of ``\\textcolor{cobalt}{Grail Knight}'' may pay 10 \\svg{gold} or 3 \\svg{valuables} at any Temple map location to cleanse the Grail. Place a blue Faction Cube on the Grail Token to mark this effect.\n"
+#| "  \\item Once cleansed, the Grail Token behaves like a Permanent Card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\\infty$ Once during each Combat Round, if the Hero is a \\textcolor{cobalt}{Grail Knight}, discard a Card to remove up to 2 \\svg{damage-red} from your Units.''\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they \\textit{must} resolve one of the following effects:\n"
@@ -427,7 +467,7 @@ msgstr ""
 "  \\item Hráči mohou použít svůj Balíček Síly a Magie při placení zlata na obranu městské oblasti své Frakce.\n"
 "  \\item Ignorujte střety v Souboji na Poli s Grálem.\n"
 "  \\item Hráči nemohou Navštívit Pole se Žetonem Grálu, dokud již nenavštívili alespoň dva Obelisky nebo Žeton Grálu nebyl získán jakýmkoli Hrdinou alespoň jednou.\n"
-"  \\item Aby hráč získal Žeton Grálu, musí jeho Hrdina zaplatit 2 \\svgeven{movement} na Poli s Grálem.\n"
+"  \\item Aby hráč získal Žeton Grálu, musí jeho Hrdina zaplatit 2 MP na Poli s Grálem.\n"
 "  \\item Pokud hráč nemá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, musí okamžitě po získání Žetonu Grálu odstranit Kartu Jednotky své Frakce z Balíčku Jednotek. Tento efekt může nastat pouze jednou na hráče.\n"
 "  \\item Pokud jiný Hrdina porazí Hrdinu s Žetonem Grálu, také získá Žeton Grálu.\n"
 "  \\item Pokud se Hrdina s Žetonem Grálu vzdá, Žeton Grálu je umístěn na Pole, kde se Hrdina vzdal.\n"
