--- a/translations/recommendations.tex/cs.po
+++ b/translations/recommendations.tex/cs.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-04-01 12:55+0000\n"
-"PO-Revision-Date: 2025-06-19 01:14+0200"
+"POT-Creation-Date: 2025-06-19 08:35+0000\n"
+"PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/sections/recommendations/cs/>\n"
@@ -310,7 +310,10 @@ msgstr ""
 
 #. type: multicols
 #: sections/recommendations.tex:75
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
+#| "\n"
 msgid ""
 "During Combat with Neutral Units in Clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the Combat Board, the player positioning the Neutral Units must do the same.\n"
 "\n"
@@ -320,14 +323,19 @@ msgstr ""
 
 #. type: multicols
 #: sections/recommendations.tex:79
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "Placing Neutral Units far apart only makes the other player waste MPs, which slows the game down.\n"
+#| "The exception to this rule is when there are three Neutral \\svg{unit_ground} or \\svg{unit_flying} Units to position, as all of them must go to the front line.\n"
+#| "See examples that follow.\n"
+#| "\n"
 msgid ""
 "Placing Neutral Units far apart only makes the other player waste \\svgeven{movement}, which slows the game down.\n"
 "The exception to this rule is when there are three Neutral \\svg{unit_ground} or \\svg{unit_flying} Units to position, as all of them must go to the front line.\n"
 "See examples that follow.\n"
 "\n"
 msgstr ""
-"Umístění Neutrálních Jednotek daleko od sebe jen přinutí druhého hráče plýtvat \\svgeven{movement}, což zpomaluje hru.\n"
+"Umístění Neutrálních Jednotek daleko od sebe jen přinutí druhého hráče plýtvat BP, což zpomaluje hru.\n"
 "Výjimkou z tohoto pravidla je, když je třeba umístit tři Neutrální \\svg{unit_ground} nebo \\svg{unit_flying} Jednotky, protože všechny musí jít do přední linie.\n"
 "Viz následující příklady.\n"
 "\n"
