Global revision of text (#258)

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -112,7 +112,7 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \item If the Tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.
   \item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.
 
-  \item Enemy armies have 3 MPs per Round.
+  \item Enemy armies have 3 \svgeven{movement} per Round.
   \item Enemy armies move at the end of every Turn, starting with the Turn they spawned.
   \item Enemy armies move as described in the rulebook (p.\,33), but instead of capturing, they destroy everything in their path.
     Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.
@@ -122,9 +122,9 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 \subsection*{\MakeUppercase{Combat with\\Enemy Armies}}
 
 \begin{itemize}
-  \item Fighting enemy armies over more than one Combat Round does not cost Movement Points.
+  \item Fighting enemy armies over more than one Combat Round does not cost \svgeven{movement}.
   \item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.
-    A retreating Main Hero loses all remaining MPs and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.
+    A retreating Main Hero loses all remaining \svgeven{movement} and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.
   \item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.
   \item Killed enemy Units do not respawn.
 \end{itemize}
@@ -133,9 +133,9 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
 
 \begin{itemize}
   \item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).
-  \item At the beginning of the \nth{2} Combat Round and every following Round, 2 Units Reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 Units) to continue the fight until either the player retreats or every Neutral Unit from the Reinforcement pool is killed. \textit{If the number of enemy Units at the beginning of a Round is 1 or lower, draw up to a total of 4 Units (i.e., there are always 4 or 5 enemy Units on the Board after Reinforcing, if available).}
-  \item Place the Reinforcing Units on the enemy base line, starting from the left with the lowest Initiative (\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.
-  \item When a player retreats, the enemy army draws up to the ``minimum'' of 4 Units and takes these as starting Units to the next fight.
+  \item At the beginning of the \nth{2} Combat Round and every following Round, 2 Units Reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 Units) to continue the fight until either the player retreats or every Neutral Unit from the Reinforcement pool is killed. \textit{If the number of enemy Units at the beginning of a Round is 1 or lower, draw up to a total of 4 Units (i.e., there are always 4 or 5 enemy Units on the board after Reinforcing, if available).}
+  \item Place the Reinforcing Units on the enemy backline, starting from the left with the lowest Initiative (\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.
+  \item When a player retreats, the enemy army draws up to a minimum of 4 Units and takes these as starting Units to the next fight.
 \end{itemize}
 
 \columnbreak
