--- a/translations/recommendations.tex/de.po
+++ b/translations/recommendations.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-04-01 12:55+0000\n"
+"POT-Creation-Date: 2025-06-19 08:35+0000\n"
 "PO-Revision-Date: 2025-04-01 12:55+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -244,7 +244,7 @@ msgstr ""
 #: sections/recommendations.tex:75
 #, no-wrap
 msgid ""
-"During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
+"During Combat with Neutral Units in Clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the Combat Board, the player positioning the Neutral Units must do the same.\n"
 "\n"
 msgstr ""
 
@@ -252,7 +252,7 @@ msgstr ""
 #: sections/recommendations.tex:79
 #, no-wrap
 msgid ""
-"Placing Neutral Units far apart only makes the other player waste MPs, which slows the game down.\n"
+"Placing Neutral Units far apart only makes the other player waste \\svgeven{movement}, which slows the game down.\n"
 "The exception to this rule is when there are three Neutral \\svg{unit_ground} or \\svg{unit_flying} Units to position, as all of them must go to the front line.\n"
 "See examples that follow.\n"
 "\n"
