--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-04-25 07:18+0000\n"
+"POT-Creation-Date: 2025-06-19 08:35+0000\n"
 "PO-Revision-Date: 2025-04-25 07:18+0000\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -393,7 +393,7 @@ msgstr ""
 #: coops/sentinels.tex:121
 #, no-wrap
 msgid ""
-"  \\item Enemy armies have 3 MPs per Round.\n"
+"  \\item Enemy armies have 3 \\svgeven{movement} per Round.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
 "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
 "    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
@@ -415,9 +415,9 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Fighting enemy armies over more than one Combat Round does not cost Movement Points.\n"
+"  \\item Fighting enemy armies over more than one Combat Round does not cost \\svgeven{movement}.\n"
 "  \\item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.\n"
-"    A retreating Main Hero loses all remaining MPs and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
+"    A retreating Main Hero loses all remaining \\svgeven{movement} and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
 "  \\item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.\n"
 "  \\item Killed enemy Units do not respawn.\n"
 "\\end{itemize}\n"
@@ -438,9 +438,9 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).\n"
-"  \\item At the beginning of the \\nth{2} Combat Round and every following Round, 2 Units Reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 Units) to continue the fight until either the player retreats or every Neutral Unit from the Reinforcement pool is killed. \\textit{If the number of enemy Units at the beginning of a Round is 1 or lower, draw up to a total of 4 Units (i.e., there are always 4 or 5 enemy Units on the Board after Reinforcing, if available).}\n"
-"  \\item Place the Reinforcing Units on the enemy base line, starting from the left with the lowest Initiative (\\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.\n"
-"  \\item When a player retreats, the enemy army draws up to the ``minimum'' of 4 Units and takes these as starting Units to the next fight.\n"
+"  \\item At the beginning of the \\nth{2} Combat Round and every following Round, 2 Units Reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 Units) to continue the fight until either the player retreats or every Neutral Unit from the Reinforcement pool is killed. \\textit{If the number of enemy Units at the beginning of a Round is 1 or lower, draw up to a total of 4 Units (i.e., there are always 4 or 5 enemy Units on the board after Reinforcing, if available).}\n"
+"  \\item Place the Reinforcing Units on the enemy backline, starting from the left with the lowest Initiative (\\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.\n"
+"  \\item When a player retreats, the enemy army draws up to a minimum of 4 Units and takes these as starting Units to the next fight.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -449,7 +449,7 @@ msgstr ""
 #: coops/sentinels.tex:142 coops/close_to_enemies.tex:145
 #: coops/stand_united.tex:87 clash/dragoncurse_castle.tex:85
 #: campaigns/inferno_devilish_plan.tex:224 campaigns/castle_greek_gift.tex:120
-#: campaigns/castle_greek_gift.tex:271 sections/credits.tex:26
+#: campaigns/castle_greek_gift.tex:271 sections/credits.tex:28
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -460,8 +460,8 @@ msgstr ""
 #: coops/sentinels.tex:144 coops/titans_stronghold.tex:110
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
-#: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:28
-#: sections/credits.tex:32
+#: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
+#: sections/credits.tex:34
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
