--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -504,15 +504,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:121
-#, fuzzy, no-wrap
-#| msgid ""
-#| "  \\item Enemy armies have 3 MPs per Round.\n"
-#| "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
-#| "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
-#| "    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
-#| "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "  \\item Enemy armies have 3 \\svgeven{movement} per Round.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
@@ -522,7 +514,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\item Les Armées Ennemies ont 3 PM par Manche.\n"
+"  \\item Les Armées Ennemies ont 3 \\svgeven{movement} par Manche.\n"
 "  \\item Les Armées ennemies se déplacent à la fin de chaque Manche, en commençant par la Manche où elles apparaissent.\n"
 "  \\item Les Armées Ennemies se déplacent selon les règles (p.\\,33), mais à la place de capturer, elles détruisent tout sur leur passage.\n"
 "    Placez un Cube Noir sur les cases qu'elles visitent, ces cases sont maintenant des cases vides.\n"
@@ -542,16 +534,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:131
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item Fighting enemy armies over more than one Combat Round does not cost Movement Points.\n"
-#| "  \\item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.\n"
-#| "    A retreating Main Hero loses all remaining MPs and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
-#| "  \\item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.\n"
-#| "  \\item Killed enemy Units do not respawn.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Fighting enemy armies over more than one Combat Round does not cost \\svgeven{movement}.\n"
@@ -563,7 +546,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Combattre les Armées Ennemies plus d'un tour de combat ne coûtent pas de Point de Mouvement.\n"
+"  \\item Combattre les Armées Ennemies plus d'un tour de combat ne coûtent pas de \\svgeven{movement}.\n"
 "  \\item Pendant un combat avec une armée ennemie, un Héros peut fuir à l'activation d'une unité alliée.\n"
 "    Un Héros Principal fuyant perd le reste de ses Points de Mouvement et retourne dans une Ville ou une Enclave alliée de son choix en gardant toutes ses unités survivantes.\n"
 "  \\item Un Héros Secondaire fuyant est retiré du jeu, mais le Joueur conserve les unités survivantes.\n"
@@ -583,15 +566,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:140
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).\n"
-#| "  \\item At the beginning of the \\nth{2} Combat Round and every following Round, 2 Units Reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 Units) to continue the fight until either the player retreats or every Neutral Unit from the Reinforcement pool is killed. \\textit{If the number of enemy Units at the beginning of a Round is 1 or lower, draw up to a total of 4 Units (i.e., there are always 4 or 5 enemy Units on the Board after Reinforcing, if available).}\n"
-#| "  \\item Place the Reinforcing Units on the enemy base line, starting from the left with the lowest Initiative (\\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.\n"
-#| "  \\item When a player retreats, the enemy army draws up to the ``minimum'' of 4 Units and takes these as starting Units to the next fight.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).\n"
@@ -605,7 +580,7 @@ msgstr ""
 "  \\item A la Manche 10, une Armée de Boss apparaît. Elle est différente des précédentes car elle est Renforcée par une réserve d'Unités Neutres (Réserve de Renfort = nombre entre parenthèses dans la table).\n"
 "  \\item Au début du 2$^{e}$ Tour de Combat et chaque Tour suivant, 2 Unités Renforcent l'armée restante de la Réserve de Renforts mélangée (maximum 5 Unités) pour continuer le combat jusqu'à la fuite ou la victoire totale du Joueur. \\textit{Si le nombre d'Unités ennemies est de 1 ou moins au début d'un Tour de Combat, piochez jusqu'à un total de 4 Unités ( il y a toujours 4 ou 5 Unités sur le Plateau après Renfort, si possible).}\n"
 "  \\item Placez les Renforts sur leur ligne de base, en commençant par la gauche avec l'Initiative la plus basse (Unités \\svg{unit_ranged} en premier). Si besoin, continuez sur la ligne suivante dans le même ordre.\n"
-"  \\item Si un Joueur fuit, l'Armée Ennemie pioche jusqu'à un «minimum» de 4 Unités comme Unités de Départ pour le prochain combat.\n"
+"  \\item Si un Joueur fuit, l'Armée Ennemie pioche jusqu'à un minimum de 4 Unités comme Unités de Départ pour le prochain combat.\n"
 "\\end{itemize}\n"
 "\n"
 
