--- a/translations/close_to_enemies.tex/fr.po
+++ b/translations/close_to_enemies.tex/fr.po
@@ -464,7 +464,7 @@ msgstr ""
 "\\textbf{Manche 2:}\n"
 "\\begin{itemize}\n"
 "  \\item La première vague de l'Armée des Clans Ennemis attaquent chaque Ville (voir ci-dessous).\n"
-"  \\item Après avoir défendu sa Ville, chaque Joueur peut recruter un Héros Secondaire pour 5~\\svg{gold} durant cette Manche. Nécessite le Jeton de Population.\n"
+"  \\item Après la défense de sa Ville, chaque Joueur peut recruter un Héros Secondaire pour 5~\\svg{gold} durant cette Manche, avec son Jeton de Population.\n"
 "\\end{itemize}\n"
 "\\textbf{Manche 3:}\n"
 "\\begin{itemize}\n"
@@ -473,12 +473,12 @@ msgstr ""
 "\\textbf{Manche 4:}\n"
 "\\begin{itemize}\n"
 "  \\item La deuxième vague d'Armée des Clans Ennemis attaque chaque Ville (voir ci-dessous).\n"
-"  \\item Après la défense de sa Ville, chaque Joueur peut Fouillez (3) le \\textit{Deck d'Artéfact}.\n"
+"  \\item Après la défense de sa Ville, le Joueur peut Fouillez (3) le \\textit{Deck d'Artéfact}.\n"
 "\\end{itemize}\n"
 "\\textbf{Manche 6:}\n"
 "\\begin{itemize}\n"
 "  \\item La troisième vague de l'Armée des Clans Ennemis attaque chaque Ville (voir ci-dessous).\n"
-"  \\item Après la défense de la Ville, chaque Joueur peut Fouillez (3) le \\textit{Deck d'Artéfact}.\n"
+"  \\item Après la défense de sa Ville, le Joueur peut Fouillez (3) le \\textit{Deck d'Artéfact}.\n"
 "\\end{itemize}\n"
 "\\textbf{Manche 7:}\n"
 "\\begin{itemize}\n"
