--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -65,7 +65,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Bâtiments de départ :} Demeure \\bronze\\n\n"
+"\\textbf{Bâtiments de départ :} Demeure \\bronze\\\n"
 "\n"
 
 #. type: multicols*
