--- a/translations/close_to_enemies.tex/fr.po
+++ b/translations/close_to_enemies.tex/fr.po
@@ -96,7 +96,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Prenez les Tuiles suivantes et disposez-les comme indiqué sur le schéma du Scénario ($J$ représente le nombre de joueurs):\n"
+"Prenez les Tuiles suivantes et disposez-les comme indiqué sur le schéma du Scénario:\n"
 "\n"
 
 #. type: multicols*
@@ -167,7 +167,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Bâtiments de départ :} Demeure \\bronze\\n\n"
+"\\textbf{Bâtiments de départ :} Demeure \\bronze\\\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
