--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -68,7 +68,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling\n"
 "\n"
 msgstr ""
-"\\textbf{Bâtiments de départ :} Demeure \\bronze\\n\n"
+"\\textbf{Bâtiments de départ :} Demeure \\bronze\\\n"
 "\n"
 
 #. type: multicols*
